--- a/src/global.css
+++ b/src/global.css
@@ -15,5 +15,7 @@ body {
   -webkit-font-smoothing: antialised;
   text-rendering: optimizeLegibility;
 
+  font-family: Roboto, sans-serif;
+
   background-color: #2b2b2b;
 }
